examples/test/testpolicy9815.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9815
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key34: value32
      key30: value5
      key44: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value48
          key30: value35
          key18: value8
      podSelector:
        matchLabels:
          key21: value15
          key13: value5
          key29: value11
